# lichtfeld-triposplat-plugin

./: .gitignore  LICENSE  NOTICE  README.md  __init__.py  conftest.py  install.ps1  install.sh  pyproject.toml  uninstall.ps1  uninstall.sh
.github/workflows/: ci.yml
core/: downloads.py  export.py  insertion.py  job.py  pipeline_loader.py  preprocess.py
docs/superpowers/plans/: 2026-06-01-triposplat-plugin.md
docs/superpowers/specs/: 2026-06-01-triposplat-plugin-design.md
panels/: main_panel.py  main_panel.rcss  main_panel.rml
tests/: test_downloads.py  test_gpu_smoke.py  test_insertion.py  test_job_cache.py  test_main_panel_preview.py  test_vendored_imports.py
triposplat/: PIN.txt  __init__.py  triposplat.py
